force-app/main/default/objects/SFBG_Answer__c/SFBG_Answer__c.object-meta.xml
<CustomObject>
    <description>Represents an Answer record. Part of the Dynamic Questionnaire asset created by Macjules Sevilla.</description>
    <label>Answer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>