force-app/main/default/objects/SFBG_Answer__c/fields/SFBG_Answer__c.field-meta.xml
<CustomField>
    <fullName>SFBG_Answer__c</fullName>
    <description>The label to display in the custom rendering engine.</description>
    <label>Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>