force-app/main/default/objects/SFBG_Answer__c/fields/SFBG_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>SFBG_ExternalId__c</fullName>
    <description>Uniquely identifies an Answer record. Populate this field for data seeding.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>