force-app/main/default/objects/SFBG_Answer__c/fields/SFBG_IsQuestionActiveFormula__c.field-meta.xml
<CustomField>
    <fullName>SFBG_IsQuestionActiveFormula__c</fullName>
    <description>Displays the Is Active value of the parent Question record.</description>
    <formula>SFBG_QuestionId__r.SFBG_IsActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Question Active?</label>
    <type>Checkbox</type>
</CustomField>