force-app/main/default/objects/SFBG_Answer__c/fields/SFBG_IsQuestionnaireActiveFormula__c.field-meta.xml
<CustomField>
    <fullName>SFBG_IsQuestionnaireActiveFormula__c</fullName>
    <description>Formula field showing the Is Active status of the parent Questionnaire. Use this in configuring the briefcase.</description>
    <formula>SFBG_QuestionId__r.SFBG_QuestionnaireId__r.SFBG_IsActive__c</formula>
    <label>Is Questionnaire Active?</label>
    <type>Checkbox</type>
</CustomField>