force-app/main/default/objects/SFBG_Answer__c/fields/SFBG_Order__c.field-meta.xml
<CustomField>
    <fullName>SFBG_Order__c</fullName>
    <description>The order by which the answers are displayed in the rendering engine. Use 100 as intervals.</description>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>