force-app/main/default/objects/SFBG_Answer__c/fields/SFBG_QuestionId__c.field-meta.xml
<CustomField>
    <fullName>SFBG_QuestionId__c</fullName>
    <description>The question record where this answer record is related.</description>
    <label>Question</label>
    <referenceTo>SFBG_Question__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>SFBG_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>