force-app/main/default/objects/SFBG_Answer__c/fields/SFBG_QuestionnaireFormula__c.field-meta.xml
<CustomField>
    <fullName>SFBG_QuestionnaireFormula__c</fullName>
    <description>Name of the parent Questionnaire record.</description>
    <formula>SFBG_QuestionId__r.SFBG_QuestionnaireId__r.Name</formula>
    <label>Questionnaire</label>
    <type>Text</type>
</CustomField>