force-app/main/default/objects/SFBG_Answer__c/fields/SFBG_QuestionToDisplayId__c.field-meta.xml
<CustomField>
    <fullName>SFBG_QuestionToDisplayId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use this to open the next question.</description>
    <label>Question to Display</label>
    <referenceTo>SFBG_Question__c</referenceTo>
    <relationshipLabel>Answers (Question to Display)</relationshipLabel>
    <relationshipName>SFBG_QuestionsToDisplay</relationshipName>
    <type>Lookup</type>
</CustomField>