force-app/main/default/objects/SFBG_Answer__c/fields/SFBG_Value__c.field-meta.xml
<CustomField>
    <fullName>SFBG_Value__c</fullName>
    <description>The value of the answer. In most cases, this value will be equal to the Answer however this can be replaced with some code value.</description>
    <label>Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>