force-app/main/default/objects/SFBG_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SFBG_QuestionnaireFormula__c</columns>
    <columns>SFBG_QuestionId__c</columns>
    <columns>SFBG_Answer__c</columns>
    <columns>SFBG_Value__c</columns>
    <columns>SFBG_IsActive__c</columns>
    <columns>SFBG_QuestionToDisplayId__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>